@@ -23,6 +23,7 @@
   * Restored parsing of block comments.  RubyForge bug #28668 by Stefano Crocco.
   * Metaprogrammed methods defined with blocks no longer confuse the ruby
     parser.  RubyForge bug #28370 by Erik Hollensbe.
+  * ri no longer displays all methods in the inheritance chain.
 
 === 3.2 / 2010-12-29
 
